feat(测试跟踪): 非MS平台集成支持平台状态字段导入导出
--story=1012478 --user=宋昌昌 与JIRA集成，在MS列表中导出缺陷时，希望能够支持导出“平台状态”字段 https://www.tapd.cn/55049933/s/1396115